added <input> and div.img to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,19 @@
     <!-- ===== CSS files ===== -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-
 </head>
 
 <!-- ======================================== -->
 
 <body>
-    <h1>Hello world</h1>
+    <div class="container">
+        <div class="form">
+            <input type="text" class="form__input" name="" value="" placeholder="Search(16pt)">
+        </div>
+
+        <div class="img">
+        </div>
+    </div>
 </body>
+
 </html>
