--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- ===== CSS files ===== -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="" charset="utf-8"></script>
 </head>
 
 <!-- ======================================== -->
