--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <!-- ===== CSS files ===== -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- ===== Javascript & JQuery files ===== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/main.js" charset="utf-8"></script>
+    <!-- ===== ~end~ ===== -->
 </head>
 
 <!-- ======================================== -->
