added Jquery Luminous plugin

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Treehouse Techdegree Project 5</title>
     <!-- ===== CSS files ===== -->
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="js/dist/luminous-basic.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <!-- ===== Javascript & JQuery files ===== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/dist/Luminous.min.js" charset="utf-8"></script>
     <script src="js/main.js" charset="utf-8"></script>
     <!-- ===== ~end~ ===== -->
 </head>
