add id #searchBar for selecting in dom

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
         <div class="form">
-            <input type="text" class="form__input" name="" value="" placeholder="Search(16pt)">
+            <input type="text" id="searchBar" class="form__input" name="" value="" placeholder="Search(16pt)">
         </div>
 
         <div class="img">
