fix html validated errors

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- ===== Javascript & JQuery files ===== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/viewbox-master/jquery.viewbox.min.js" charset="utf-8"></script>
-    <script src="js/main.js" charset="utf-8"></script>
+    <script src="js/viewbox-master/jquery.viewbox.min.js"></script>
+    <script src="js/main.js"></script>
     <!-- ===== ~end~ ===== -->
 </head>
 
@@ -22,7 +22,7 @@
 <body>
     <div class="container">
         <div class="form">
-            <input type="text" id="searchBar" class="form__input" name="" value="" placeholder="Search(16pt)">
+            <input type="text" id="searchBar" class="form__input" name="searchBar" value="" placeholder="Search(16pt)">
         </div>
 
         <div class="img">
